--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -5,8 +5,16 @@ services:
       dockerfile: deploy/api.Dockerfile
     env_file:
       - .env
+    environment:
+      - OPS_PORTAL_API_ADDR=0.0.0.0
+      - PM2_HOME=/root/.pm2
     ports:
       - "127.0.0.1:18081:18081"
+    volumes:
+      # Allow runtime/status to read host pm2 logs and talk to host pm2 daemon (via sockets under PM2_HOME).
+      - /root/.pm2:/root/.pm2:ro
+      # Allow runtime/status git/df snapshot against the Resume-Agent repo (optional but recommended).
+      - /www/wwwroot/Resume-Agent:/www/wwwroot/Resume-Agent:ro
     restart: unless-stopped
 
   web:
@@ -32,4 +40,3 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - ./htpasswd:/etc/nginx/htpasswd:ro
     restart: unless-stopped
-
