Add API catalog tab (Swagger-like)

--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -13,6 +13,21 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 
+  # Optional docs endpoints from GoFrame.
+  location = /api.json {
+    proxy_pass http://api:18081/api.json;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+
+  location /swagger {
+    proxy_pass http://api:18081/swagger;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+
   location / {
     proxy_pass http://web:18082/;
     proxy_set_header Host $host;
@@ -20,4 +35,3 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
 }
-
