Allow env override for DeepSeek model config

--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -15,6 +15,21 @@ OBS_LOKI_URL=http://127.0.0.1:3100
 OBS_PROM_URL=http://127.0.0.1:9090
 OBS_NODE_EXPORTER_URL=http://127.0.0.1:9100
 
+# ===== LLM (DeepSeek via OpenAI-compatible endpoint) =====
+# Used by Chat + AIOps agents (Eino openai chat model).
+# Example (Volc Ark):
+# OPS_PORTAL_DS_THINK_API_KEY=...
+# OPS_PORTAL_DS_THINK_BASE_URL=https://ark.cn-beijing.volces.com/api/v3
+# OPS_PORTAL_DS_THINK_MODEL=deepseek-v3-1-terminus
+OPS_PORTAL_DS_THINK_API_KEY=
+OPS_PORTAL_DS_THINK_BASE_URL=
+OPS_PORTAL_DS_THINK_MODEL=
+
+# Quick model for executor/chat (can be same as THINK).
+OPS_PORTAL_DS_QUICK_API_KEY=
+OPS_PORTAL_DS_QUICK_BASE_URL=
+OPS_PORTAL_DS_QUICK_MODEL=
+
 # For health endpoint to generate SSH tunnel commands
 OPS_PORTAL_SSH_USER=root
 OPS_PORTAL_SSH_HOST=106.53.113.137
@@ -30,4 +45,3 @@ OPS_PORTAL_API_BASE=http://127.0.0.1:18081
 OPS_PORTAL_NGINX_PORT=18080
 OPS_PORTAL_BASIC_AUTH_USER=ops
 OPS_PORTAL_BASIC_AUTH_PASS=change-me
-
